--- a/WarehouseProject/.project
+++ b/WarehouseProject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WarehouseServer</name>
+	<name>WarehouseManagementSystem</name>
 	<comment></comment>
 	<projects>
 	</projects>
