--- a/SupervisorApp/nbproject/project.properties
+++ b/SupervisorApp/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.DAL.jar=E:\\Vijay\\Code\\Netbeans\\DAL\\dist\\DAL.jar
+file.reference.DAL.jar-1=..\\DAL\\dist\\DAL.jar
 file.reference.mysql-connector-java-5.1.30-bin.jar=C:\\Program Files\\MySQL\\MySQL Connector J\\mysql-connector-java-5.1.30-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.DAL.jar}:\
-    ${file.reference.mysql-connector-java-5.1.30-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.30-bin.jar}:\
+    ${file.reference.DAL.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint
 javac.deprecation=false
