--- a/SupervisorApp/nbproject/private/private.properties
+++ b/SupervisorApp/nbproject/private/private.properties
@@ -4,6 +4,7 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.DAL.jar=C:\\Users\\vijay.rachabattuni.LGE\\Documents\\GitHub\\dasdas\\DAL\\dist\\DAL.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
