--- a/DAL/nbproject/project.properties
+++ b/DAL/nbproject/project.properties
@@ -31,13 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.log4j-1.2-api-2.0-rc1.jar=..\\log4j\\log4j-1.2-api-2.0-rc1.jar
 file.reference.log4j-api-2.0-rc1.jar=..\\log4j\\log4j-api-2.0-rc1.jar
+file.reference.log4j-core-2.0-rc1.jar=..\\log4j\\log4j-core-2.0-rc1.jar
 file.reference.mysql-connector-java-5.1.30-bin.jar=C:\\Program Files\\MySQL\\MySQL Connector J\\mysql-connector-java-5.1.30-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.30-bin.jar}:\
     ${file.reference.log4j-api-2.0-rc1.jar}:\
-    ${file.reference.log4j-1.2-api-2.0-rc1.jar}
+    ${file.reference.log4j-1.2-api-2.0-rc1.jar}:\
+    ${file.reference.log4j-core-2.0-rc1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
