--- a/CustomerApplication/.classpath
+++ b/CustomerApplication/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/git/WWC_Spartan/WarehouseManagementSystem/libs/DALNew.jar"/>
+	<classpathentry kind="lib" path="C:/git/WWC_Spartan/WarehouseManagementSystem/libs/DAL0612.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
